src/objects/Project__c.object
<CustomObject>
    <customHelpPage>Job_Candidate_Help</customHelpPage>
    <fields>
        <fullName>Actual_Finish__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>